<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:scrollbars="none"
    android:overScrollMode="never"
    tools:context=".loginNregister.activities.LogInActivity">

    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/welcome_text"
            android:src="@drawable/log_in_img" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/welcome_text"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:textColor="@color/app_primary_light"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_subtitle"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/app_primary_light"
            android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="25dp"
            android:hint="@string/phone_number"
            android:textColorHint="@android:color/darker_gray"
            app:boxStrokeColor="@color/app_primary_light">

            <EditText
                android:id="@+id/phone_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="10dp"
                android:imeOptions="actionGo"
                android:inputType="phone"
                android:maxLength="10"
                android:maxLines="1"
                android:textColor="@color/black"
                app:drawableTint="@color/app_primary_light" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_message"
            android:textColor="@android:color/darker_gray"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"/>

        <Button android:id="@+id/get_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="25dp"
            android:paddingVertical="15dp"
            android:text="@string/get_otp" />
        
        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="VERSION 1.0"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:textColor="@android:color/darker_gray"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/signature"
            android:layout_marginBottom="25dp"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textStyle="bold|italic"
            android:textColor="@color/app_primary_light"
            />

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginHorizontal="15dp"-->
<!--            android:layout_marginTop="15dp"-->
<!--            android:gravity="center_vertical"-->
<!--            android:orientation="horizontal"-->
<!--            android:weightSum="10">-->

<!--            <View-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="1dp"-->
<!--                android:layout_weight="4"-->
<!--                android:background="@android:color/darker_gray" />-->

<!--            <TextView-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="2"-->
<!--                android:text="@string/or"-->
<!--                android:textAlignment="center"-->
<!--                android:textColor="@android:color/darker_gray" />-->

<!--            <View-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="1dp"-->
<!--                android:layout_weight="4"-->
<!--                android:background="@android:color/darker_gray" />-->

<!--        </LinearLayout>-->

<!--        <com.google.android.gms.common.SignInButton-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginHorizontal="15dp"-->
<!--            android:layout_marginVertical="15dp" />-->

    </LinearLayout>

</androidx.core.widget.NestedScrollView>