<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.adi.tallybook.models.User"/>
        <variable
            name="user"
            type="User" />

    </data>

    <ScrollView
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_basic_details"
                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_centerInParent="true"
                    android:layout_marginVertical="15dp"
                    android:textColor="@color/app_primary_light"
                    android:textStyle="bold" />

                <ImageView android:id="@+id/info"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_info"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="15dp"
                    app:tint="@color/app_primary_light" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/app_primary_light" />

            <RelativeLayout
                android:id="@+id/user_image_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:civ_border_width="1dp"
                    android:src="@color/light_gray"
                    app:civ_border_color="@color/app_primary_light" />

                <TextView android:id="@+id/select_image_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/select_an_avatar"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="11sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="15dp"
                android:weightSum="2"
                android:baselineAligned="false">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/first_name"
                    android:textColorHint="@android:color/darker_gray"
                    app:boxStrokeColor="@color/app_primary_light">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/first_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@={user.first_name}"
                        android:maxLines="1"
                        android:maxLength="16"
                        android:textColor="@color/black"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName|textCapWords"
                        tools:text="Aditya" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginStart="5dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/last_name"
                    android:textColorHint="@android:color/darker_gray"
                    app:boxStrokeColor="@color/app_primary_light">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/last_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@={user.last_name}"
                        android:maxLines="1"
                        android:maxLength="16"
                        android:textColor="@color/black"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName|textCapWords"
                        tools:text="Aditya" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="15dp"
                android:hint="@string/phone"
                app:boxBackgroundColor="@color/light_gray"
                android:textColorHint="@color/app_primary_light"
                app:boxStrokeColor="@color/app_primary_light">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={user.phone_number}"
                    android:drawablePadding="10dp"
                    android:enabled="false"
                    android:focusable="false"
                    android:inputType="none"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    app:drawableStartCompat="@drawable/ic_phone"
                    app:drawableTint="@color/app_primary_light"
                    tools:text="+91 8208401763" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="15dp"
                android:hint="@string/email_optional"
                android:textColorHint="@android:color/darker_gray"
                app:boxStrokeColor="@color/app_primary_light">

                <EditText
                    android:id="@+id/email"
                    android:autofillHints="emailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={user.email}"
                    android:drawablePadding="10dp"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    app:drawableTint="@color/app_primary_light"
                    app:drawableStartCompat="@drawable/ic_email" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/save_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:paddingVertical="15dp"
                android:text="@string/save_details"
                android:layout_marginTop="25dp" />

        </LinearLayout>

    </ScrollView>
</layout>