<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/window_background_color_primary">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/window_background_color_primary">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/tool_bar_color"
            android:theme="@style/SearchViewTheme"
            app:layout_scrollFlags="scroll|enterAlways"
            app:menu="@menu/contacts_menu"
            app:navigationIcon="@drawable/ic_back_arrow"
            app:navigationIconTint="@color/white"
            app:title="Select a contact"
            app:titleTextAppearance="@style/TextAppearance.Material3.TitleMedium"
            app:subtitle="0 contacts"
            app:subtitleTextAppearance="@style/TextAppearance.Material3.TitleSmall"
            app:subtitleTextColor="@color/light_white"
            app:titleTextColor="@color/white">

            <ProgressBar
                android:id="@+id/refresh_progress"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginVertical="15dp"
                android:indeterminateTint="@color/white"/>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/contacts_rv"
            android:fadeScrollbars="true"
            android:scrollbars="vertical"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:overScrollMode="never"/>

        <TextView android:id="@+id/no_contacts"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:textColor="@color/text_color_light"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:text="@string/no_contacts_found"/>

        <TextView android:id="@+id/no_search_result"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/no_search_results_found"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:textColor="@color/text_color_light"
            android:textStyle="bold"
            />

    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/scroll_to_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/scroll_to_top"
        app:backgroundTint="@color/fab_bg_color"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="25dp"
        android:src="@drawable/ic_scroll_up"
        app:tint="@color/text_color_light_invert"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>