<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:scrollbars="vertical">

        <LinearLayout
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="10dp"
            android:orientation="vertical">

            <TextView android:id="@+id/no_avatars"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_avatars_available"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"/>

            <LinearLayout android:id="@+id/avatar_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">

                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/loading"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading_avatars"
                    android:textColor="@android:color/darker_gray"/>

            </LinearLayout>

            <LinearLayout android:id="@+id/avatars_layout"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/what_suits_you_better"
                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginVertical="20dp"
                    android:textColor="@color/app_primary_light"
                    android:textStyle="bold"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/avatar_1"
                        android:tag="0"
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        app:civ_border_color="@color/app_primary_light"
                        app:civ_border_width="1dp"
                        android:layout_marginVertical="15dp"
                        android:paddingVertical="5dp"
                        />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/avatar_2"
                        android:tag="1"
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        app:civ_border_color="@color/app_primary_light"
                        app:civ_border_width="1dp"
                        android:layout_marginVertical="15dp"
                        android:paddingVertical="5dp"
                        />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/avatar_3"
                        android:tag="2"
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        app:civ_border_color="@color/app_primary_light"
                        app:civ_border_width="1dp"
                        android:layout_marginVertical="15dp"
                        android:paddingVertical="5dp"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/avatar_4"
                        android:tag="3"
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        app:civ_border_color="@color/app_primary_light"
                        app:civ_border_width="1dp"
                        android:layout_marginVertical="15dp"
                        android:paddingVertical="5dp"
                        />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/avatar_5"
                        android:tag="4"
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        app:civ_border_color="@color/app_primary_light"
                        app:civ_border_width="1dp"
                        android:layout_marginVertical="15dp"
                        android:paddingVertical="5dp"
                        />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/avatar_6"
                        android:tag="5"
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        app:civ_border_color="@color/app_primary_light"
                        app:civ_border_width="1dp"
                        android:layout_marginVertical="15dp"
                        android:paddingVertical="5dp"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="4"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/or"
                        android:textAlignment="center"
                        android:textColor="@android:color/darker_gray" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="4"
                        android:background="@android:color/darker_gray" />

                </LinearLayout>

            </LinearLayout>

            <Button android:id="@+id/from_device"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:text="@string/select_from_device"/>

        </LinearLayout>

    </ScrollView>

</androidx.cardview.widget.CardView>